# job-relevance-filter

./: .gitignore  Dockerfile  README.md  config.yaml  deepseek_markdown_20260505_0c79d2.md  demo.ipynb  docker-compose.yml  makefile  project-definition.md  pyproject.toml  test.ipynb  todo.md
configs/: config.yaml  criteria.yaml  locations.yaml  profile.yaml
dashboard/: app.py  callbacks.py  endpoints.py  styles.py
dashboard/assets/: custom.css  match_job_text_area.js  note_area.js
dashboard/components/: kpi.py  utils.py
dashboard/pages/: criteria.py  criteria_profile.py  jobs.py  match_job.py  memory.py  overview.py  profile.py  review.py  tracking.py
data/: jobs.csv
scr/: models.py  parser.py  scraper.py  setup.py  utils.py
src/: agents.py  memory.py  models.py  parser.py  run.py  scheduler.py  scraper.py  setup.py  utils.py
