[project]
name = "job-relevance-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "dotenv>=0.9.9",
    "langchain>=1.2.17",
    "langchain-deepseek>=1.0.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "leverparser>=0.1.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]
